# Spark

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  vert.spv
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/layers/: editor_3d_layer.cpp  editor_3d_layer.h  sandbox_2d_layer.cpp  sandbox_2d_layer.h  sandbox_3d_layer.cpp  sandbox_3d_layer.h
Sandbox/layers/editor/: editor_3d_layer.cpp  editor_3d_layer.h  editor_3d_move.cpp  editor_3d_move.h  editor_3d_rotate.cpp  editor_3d_rotate.h  editor_3d_scale.cpp  editor_3d_scale.h  editor_utils.cpp  editor_utils.h
Sandbox/layers/editor_3d/: editor_3d_rotate.cpp
Sandbox/layers/sandbox_3d/: sandbox_3d.cpp  sandbox_3d.h
Sandbox/layers/sandbox_3d/editor/: editor_3d_layer.cpp  editor_3d_layer.h  editor_3d_move.cpp  editor_3d_move.h  editor_3d_rotate.cpp  editor_3d_scale.cpp  editor_3d_scale.h  editor_3d_utils.cpp  editor_3d_utils.h
Sandbox/layers/sandbox_3d/overlay/: overlay_3d.cpp  overlay_3d.h
Sandbox/resources/model/backpack/: scene.gltf
Spark/: CMakeLists.txt
Spark/src/: CMakeLists.txt  spark.h
Spark/src/platform/: CMakeLists.txt
Spark/src/platform/Windows/: CMakeLists.txt  input.cpp  input.h  time.cpp  window.cpp  window.h  windows_window.cpp
Spark/src/platform/vulkan/: CMakeLists.txt  renderer.cpp  renderer.h  vulkan_context.cpp  vulkan_context.h
Spark/src/platform/vulkan/drawables/: box.cpp  box.h  colored_box.cpp  colored_box.h  colored_cube.cpp  colored_cube.h  colored_cylinder.cpp  colored_cylinder.h  colored_drawable.cpp  colored_drawable.h  colored_pipe.cpp  colored_pipe.h  colored_sphere.cpp  colored_sphere.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  model.cpp  model.h  pipe.cpp  pipe.h  point_light.cpp  point_light.h  quad.cpp  quad.h  render_primitive.h  sphere.cpp  sphere.h  textured_box.cpp  textured_box.h  textured_cube.cpp  textured_cube.h  textured_cylinder.cpp  textured_cylinder.h  textured_drawable.cpp  textured_drawable.h  textured_pipe.cpp  textured_pipe.h  textured_sphere.cpp  (+3 more)
Spark/src/platform/vulkan/framebuffer/: framebuffer.cpp  framebuffer.h  framebuffer2d.cpp  framebuffer2d.h  framebuffer3d.cpp  framebuffer3d.h
Spark/src/platform/vulkan/layers/: layer_renderer_2d.cpp  layer_renderer_2d.h  layer_renderer_3d.cpp  layer_renderer_3d.h  layer_renderer_3d_lights.cpp  layer_renderer_3d_lights.h  layer_renderer_3d_model.cpp  layer_renderer_3d_model.h
Spark/src/platform/vulkan/overlay/: overlay.cpp  overlay.h
Spark/src/platform/vulkan/pipeline/: pipeline.cpp  pipeline.h  pipeline2d.cpp  pipeline2d.h  pipeline3d.cpp  pipeline3d.h  pipeline3d_lights.cpp  pipeline3d_lights.h  pipeline3d_model.cpp  pipeline3d_model.h  pipeline3d_outline.cpp  pipeline3d_outline.h  pipeline3d_wireframe.cpp  pipeline3d_wireframe.h  pipeline_triangle.cpp  pipeline_triangle.h
Spark/src/platform/vulkan/resource/: mesh.cpp  mesh.h  resource.h  texture.cpp  texture.h  texture_image.cpp  texture_image.h  texture_sampler.cpp  texture_sampler.h
Spark/src/platform/vulkan/shaders/: CMakeLists.txt  shader2d.frag  shader2d.vert  shader3d.frag  shader3d.vert  shader3dLights.frag  shader3dLights.vert  shader3dModel.frag  shader3dOutline.frag  shader3dOutline.vert  shader3dWireframe.vert  texture.vert  triangle.vert
Spark/src/platform/vulkan/test/: layer2d.cpp  layer2d.h  quad.cpp  quad.h  test_layer.cpp  test_layer.h  triangle_layer.cpp  triangle_layer.h
Spark/src/platform/vulkan/vertex/: vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h
Spark/src/spark/: CMakeLists.txt
Spark/src/spark/core/: application.cpp  application.h  core.h  entry_point.h  input.cpp  input.h  key_codes.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_codes.h  time.h  window.cpp  window.h
Spark/src/spark/event/: application_event.h  event.h  keyboard_event.h  mouse_event.h
Spark/src/spark/layer/: layer.cpp  layer.h  layer2d.cpp  layer2d.h  layer3d.cpp  layer3d.h
Spark/src/spark/objects/: box.cpp  box.h  cylinder.cpp  cylinder.h  model.cpp  model.h  object.cpp  object.h  pipe.cpp  pipe.h  sphere.cpp  sphere.h
Spark/src/spark/overlay/: overlay.cpp  overlay.h
Spark/src/spark/physics/: box.cpp  box.h  complex_object3d.cpp  complex_object3d.h  cylinder.cpp  cylinder.h  general_object3d.cpp  general_object3d.h  object3d.cpp  object3d.h  pipe.cpp  pipe.h  ray_casting.cpp  ray_casting.h  sphere.cpp  sphere.h
Spark/src/spark/physics/bounding/: box_bounding.cpp  box_bounding.h  object3d_bounding.cpp  object3d_bounding.h  sphere_bounding.cpp  sphere_bounding.h
Spark/src/spark/renderer/: camera.cpp  camera.h  drawable.h  free_camera.cpp  free_camera.h  layer_renderer.cpp  layer_renderer.h  locked_camera.cpp  locked_camera.h  renderer.cpp  renderer.h
Spark/src/spark/renderer/drawables/: box.cpp  box.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  drawable.cpp  drawable.h  drawable2d.cpp  drawable2d.h  drawable3d.cpp  drawable3d.h  pipe.cpp  pipe.h  point_light.cpp  point_light.h  quad.cpp  quad.h  sphere.cpp  sphere.h
Spark/src/spark/resource/: mesh.cpp  mesh.h  model.cpp  model.h  resource.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
Spark/src/spark/utils/: file.cpp  file.h  math.cpp  math.h
Spark/src/spark/vertex/: vertex3d.h
